# python-flocxclient

./: README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
flocxclient/: __init__.py  client.py
flocxclient/common/: base.py  http.py
flocxclient/common/apiclient/: base.py
flocxclient/osc/: plugin.py
flocxclient/osc/v1/: marketplace_offer.py
flocxclient/tests/unit/: utils.py
flocxclient/tests/unit/common/: test_base.py  test_http.py
flocxclient/tests/unit/osc/: fakes.py  test_plugin.py
flocxclient/tests/unit/osc/v1/: fakes.py  test_marketplace_offer.py
flocxclient/tests/unit/v1/: test_client.py  test_offer.py  test_resource_fields.py
flocxclient/v1/: client.py  offer.py  resource_fields.py
playbooks/functional/: run.yaml
scripts/: check-conflict-markers.sh  test_functions.sh
zuul.d/: project.yaml
