
[metadata]
name = flocxclient
summary = FLOCX CLI
description-file = README.md

[files]
packages =
    flocxclient

[entry_points]
openstack.cli.extension =
    market = flocxclient.osc.plugin

openstack.market.v1 =
    market_list_offers = flocxclient.osc.v1.marketplace_offer:ListOffers
    #flocxmarket_list_bids = flocxclient.osc.v1.marketplace_bid

