
[metadata]
name = flocxclient
summary = FLOCX CLI
description-file = README.md

[files]
packages =
    flocxclient

[entry_points]
openstack.cli.extension =
    market = flocxclient.osc.plugin

openstack.market.v1 =
    market_offer_list = flocxclient.osc.v1.marketplace_offer:ListMarketOffer
    market_offer_show = flocxclient.osc.v1.marketplace_offer:ShowMarketOffer
    market_offer_create = flocxclient.osc.v1.marketplace_offer:CreateMarketOffer
